# gtest_demo

./: CMakeLists.txt  main.cpp
calculator/: calculator.h
test/directory/: calculator.test.cpp
